# CommonAssessmentTool

./: .env  .gitignore  .pylintrc  README.md  docker-compose.yml  initialize_data.py  load_data.py  model_dt.pkl  model_rf.pkl  my-common-assessment-tool.pem  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: create_admin.py  database.py  main.py  models.py
app/auth/: dependencies.py  repository.py  router.py  security.py  service.py
app/clients/: dependencies.py  repository.py  router.py  schema.py
app/clients/service/: client_service.py  logic.py  model.py  model_lr.pkl  model_manager.py
tests/: conftest.py  test.py  test_auth.py  test_basic.py  test_clients.py
